cmake_minimum_required (VERSION 2.8)
include(CMakeForceCompiler)
CMAKE_FORCE_Fortran_COMPILER(mpiifort "Intel MPI (Fortran)")
project (unnamed.e Fortran)
set (src_DIR "${PROJECT_SOURCE_DIR}/src")
set (ExternalCode_DIR "${PROJECT_SOURCE_DIR}/ExternalCode")
set (CMAKE_BUILD_TYPE Release)

#set(INC_DIR /work1/hdf5/include)
#set(LINK_DIR /work1/hdf5/lib)

foreach (sub1dir ${ExternalCode_DIR}/*/)
  foreach (sub2dir ${sub1dir}/*/)
    foreach (sub3dir ${sub2dir}/*/)
      foreach (sub4dir ${sub3dir}/*/)
        foreach (sub5dir ${sub4dir}/*/)
          foreach (sub6dir ${sub5dir}/*/)
            foreach (sub7dir ${sub6dir}/*/)
              foreach (sub8dir ${sub7dir}/*/)
                foreach (sub9dir ${sub8dir}/*/)
                  include_directories ("${sub9dir}")
                  file (GLOB code "${sub9dir}/*.f90")
                  list (APPEND sources ${code})
                endforeach ()
                include_directories ("${sub8dir}")
                file (GLOB code "${sub8dir}/*.f90")
                list (APPEND sources ${code})
              endforeach ()
              include_directories ("${sub7dir}")
              file (GLOB code "${sub7dir}/*.f90")
              list (APPEND sources ${code})
            endforeach ()
            include_directories ("${sub6dir}")
            file (GLOB code "${sub6dir}/*.f90")
            list (APPEND sources ${code})
          endforeach ()
          include_directories ("${sub5dir}")
          file (GLOB code "${sub5dir}/*.f90")
          list (APPEND sources ${code})
        endforeach ()
        include_directories ("${sub4dir}")
        file (GLOB code "${sub4dir}/*.f90")
        list (APPEND sources ${code})
      endforeach ()
      include_directories ("${sub3dir}")
      file (GLOB code "${sub3dir}/*.f90")
      list (APPEND sources ${code})
    endforeach ()
    include_directories ("${sub2dir}")
    file (GLOB code "${sub2dir}/*.f90")
    list (APPEND sources ${code})
  endforeach ()
  include_directories ("${sub1dir}")
  file (GLOB code "${sub1dir}/*.f90")
  list (APPEND sources ${code})
endforeach ()
include_directories ("${src_DIR}")
file (GLOB code "${src_DIR}/*.f90" "${src_DIR}/*.F90")
list (APPEND sources ${code})

include_directories(${INC_DIR})
link_directories(${LINK_DIR})

add_executable (${PROJECT_NAME} ${sources})
#target_link_libraries(${PROJECT_NAME} hdf5hl_fortran hdf5_hl hdf5_fortran hdf5) 
#add_compile_options(-lrt -lz -ldl -lm -Wl,-rpath -Wl,${LINK_DIR})

